--- a/views/intro_nudging3.ejs
+++ b/views/intro_nudging3.ejs
@@ -57,7 +57,7 @@
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
         <p>Jesteś w trakcie finalizowania przelewu. Zweryfikowałeś wszystkie dane. Potwierdź wysyłkę środków w aplikacji bankowej.</p>
         <form action="/intro_nudging3" method="POST" id="intro_nudging3-form">
-            <button type="submit" class="submit-btn">Przejdź do zadania</button>
+            <button type="submit" class="submit-btn" id="submit-button">Przejdź do zadania</button>
         </form>
     </div>
 
@@ -78,6 +78,12 @@
         history.pushState(null, null, location.href);
         window.addEventListener('popstate', function () {
         history.pushState(null, null, location.href);
+        });
+
+        // Wyłączenie przycisku po pierwszym kliknięciu
+       document.getElementById('intro_nudging3-form').addEventListener('submit', function() {
+        const submitButton = document.getElementById('submit-button');
+        submitButton.disabled = true; 
         });
         
     </script>
