--- a/views/intro_task4.ejs
+++ b/views/intro_task4.ejs
@@ -71,7 +71,7 @@
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
         <p>Jesteś w trakcie rejestracji. Uzupełniłeś już wszystkie dane osobowe. Dokończ proces rejestracji.</p>
         <form action="/intro_task4" method="POST" id="intro_task4-form">
-            <button type="submit" class="submit-btn">Przejdź do zadania</button>
+            <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
         <!-- <div class="progress">
             <div class="progress-bar" id="progress-bar"></div>
@@ -100,6 +100,15 @@
         window.addEventListener('popstate', function () {
         history.pushState(null, null, location.href);
         });
+
+
+        // Wyłączenie przycisku po pierwszym kliknięciu
+         document.getElementById('intro_task4-form').addEventListener('submit', function() {
+        const submitButton = document.getElementById('submit-button');
+        submitButton.disabled = true; 
+        });
+
+
     </script>
 </body>
 </html>
