--- a/views/intro_task8.ejs
+++ b/views/intro_task8.ejs
@@ -70,7 +70,7 @@
         <p>Jesteś w trakcie zamawiania biletów piłkarskich. Słyszałaś/eś o możliwości kupienia koszulek w pakiecie, 
             jednak nie jesteś co do tego pomysłu przekonany. Wybierz odpowiednie opcje.</p>
         <form action="/intro_task8" method="POST" id="intro_task8-form">
-            <button type="submit" class="submit-btn">Przejdź do zadania</button>
+            <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
         <!-- <div class="progress">
             <div class="progress-bar" id="progress-bar"></div>
@@ -94,6 +94,14 @@
         window.addEventListener('popstate', function () {
         history.pushState(null, null, location.href);
         });
+
+        // Wyłączenie przycisku po pierwszym kliknięciu
+        document.getElementById('intro_task8-form').addEventListener('submit', function() {
+        const submitButton = document.getElementById('submit-button');
+        submitButton.disabled = true; 
+        });
+
+        
     </script>
 </body>
 </html>
