--- a/views/intro_task2.ejs
+++ b/views/intro_task2.ejs
@@ -69,7 +69,7 @@
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
         <p>Usługa, której jesteś subskrybentem, Cię już nie zadowala, chcesz z niej zrezygnować.Wybierz odpowiednią opcję</p>
         <form action="/intro_task2" method="POST" id="intro_task2-form">
-            <button type="submit" class="submit-btn">Przejdź do zadania</button>
+            <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
         <!-- <div class="progress">
             <div class="progress-bar" id="progress-bar"></div>
@@ -102,6 +102,13 @@
         window.addEventListener('popstate', function () {
         history.pushState(null, null, location.href);
         });
+
+        // Wyłączenie przycisku po pierwszym kliknięciu
+       document.getElementById('intro_task2-form').addEventListener('submit', function() {
+        const submitButton = document.getElementById('submit-button');
+        submitButton.disabled = true; 
+        });
+        
         
     </script>
 </body>
