--- a/views/nudging3.ejs
+++ b/views/nudging3.ejs
@@ -90,10 +90,10 @@
             <form action="/nudging3" method="POST" id="nudging3-form">
                 <div class="button-container">
                     
-                    <button type="submit" name="choice" value="blue" class="btn btn-blue">
+                    <button type="submit" id="submit-button1" name="choice" value="blue" class="btn btn-blue">
                         Anuluj operację<br><small>Cofnij do aplikacji</small>
                     </button>
-                    <button type="submit" name="choice" value="orange" class="btn btn-orange">
+                    <button type="submit"  id="submit-button2" name="choice" value="orange" class="btn btn-orange">
                         Sfinalizuj płatność<br><small>Przelej swoje środki</small>
                     </button>
                 </div>
@@ -147,7 +147,16 @@
         window.addEventListener('popstate', function () {
         history.pushState(null, null, location.href);
         });
-        
+
+
+         // Wyłączenie przycisku po pierwszym kliknięciu
+         document.getElementById('nudging3-form').addEventListener('submit', function() {
+        const submitButton1 = document.getElementById('submit-button1');
+        submitButton1.disabled = true; 
+        const submitButton2 = document.getElementById('submit-button2');
+        submitButton2.disabled = true;
+        });
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
