--- a/views/task1.ejs
+++ b/views/task1.ejs
@@ -100,11 +100,11 @@
           <form action="/task1" method="POST" id="task1-form">
           
             <div class="button-container">
-                <button type="submit" name="choice" value="red" class="btn btn-red">
+                <button type="submit" id="submit-button1" name="choice" value="red" class="btn btn-red">
                     Idź do koszyka<br><small>Zapłać za zamówienie</small>
                   </button>
               
-                <button type="submit" name="choice" value="green" class="btn btn-green">
+                <button type="submit" name="choice" id="submit-button2" value="green" class="btn btn-green">
                 Dodaj ser<br><small>Opcja 10zł droższa</small>
               </button> 
             </div>
@@ -174,6 +174,14 @@
         history.pushState(null, null, location.href);
         });
 
+         // Wyłączenie przycisku po pierwszym kliknięciu
+        document.getElementById('task1-form').addEventListener('submit', function() {
+        const submitButton1 = document.getElementById('submit-button1');
+        submitButton1.disabled = true; 
+        const submitButton2 = document.getElementById('submit-button2');
+        submitButton2.disabled = true;
+        });
+        
     </script>
 
     <!-- Bootstrap JS -->
