--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -112,7 +112,7 @@
                     </td>
                 </tr>
             </table>
-            <button type="submit" class="submit-btn">Zarejestruj się</button>
+            <button type="submit" id="submit-btn"  class="submit-btn">Zarejestruj się</button>
             <input type="hidden" name="timeout" id="timeout" value="false">
             <input type="hidden" name="task4Token" value="<%= task4Token %>">
         </form>
@@ -174,7 +174,15 @@
     }
 
     startProgressBar(taskDuration);
+
+
+       // Wyłączenie przycisku po pierwszym kliknięciu
+       document.getElementById('task4-form').addEventListener('submit', function() {
+        const submitButton = document.getElementById('submit-btn');
+        submitButton.disabled = true; ;
+        });
+
+
 </script>
-    </script>
 </body>
 </html>
