--- a/views/task5.ejs
+++ b/views/task5.ejs
@@ -104,7 +104,7 @@
                     </td>
                 </tr>
             </table>
-            <button type="submit" class="submit-btn">Zarejestruj się</button>
+            <button type="submit" id="submit-btn" class="submit-btn">Zarejestruj się</button>
             <input type="hidden" name="task5Token" value="<%= task5Token %>">
             <input type="hidden" name="timeout" id="timeout" value="false">
         </form>
@@ -155,6 +155,12 @@
         history.pushState(null, null, location.href);
         window.addEventListener('popstate', function () {
         history.pushState(null, null, location.href);
+        });
+        
+        // Wyłączenie przycisku po pierwszym kliknięciu
+        document.getElementById('task5-form').addEventListener('submit', function() {
+        const submitButton = document.getElementById('submit-btn');
+        submitButton.disabled = true; ;
         });
         
     </script>
