Poprawa widoku na smartfonach
Poprawa widoku na smartfonach

--- a/views/intro_nudging1.ejs
+++ b/views/intro_nudging1.ejs
@@ -55,7 +55,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Chcesz wylogować się ze strony. Użyj odpowiedniego przycisku.</p>
+        <p>Chcesz wylogować się ze strony internetowej. Użyj odpowiedniego przycisku.</p>
         <form action="/intro_nudging1" method="POST" id="intro_nudging1-form">
             <button type="submit"  id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
