--- a/views/nudging3.ejs
+++ b/views/nudging3.ejs
@@ -91,10 +91,10 @@
                 <div class="button-container">
                     
                     <button type="submit" id="submit-button1" name="choice" value="blue" class="btn btn-blue">
-                        Anuluj operację<br><small>Cofnij do aplikacji</small>
+                        Anuluj operację<br><small>Cofnij</small>
                     </button>
                     <button type="submit"  id="submit-button2" name="choice" value="orange" class="btn btn-orange">
-                        Sfinalizuj płatność<br><small>Przelej swoje środki</small>
+                        Sfinalizuj płatność<br><small>Przelej środki</small>
                     </button>
                 </div>
                 <input type="hidden" name="nudging3Token" value="<%= nudging3Token %>">
