--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Zadanie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Jeśli w poprzednich widokach używasz Bootstrapa -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
