--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Zadanie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -86,6 +87,7 @@
             <!-- Ubezpieczenie - 50 zł -->
              <!-- Kontener ubezpieczenia - domyślnie ukryty -->
         <div id="insurance-section" style="display: none;">
+
             <!-- W zależności od wersji (negative/positive) zmieniamy kolor i tekst -->
             <% if (wersja === 'negative') { %>
                 <p class="highlight-red">Na pewno chcesz ryzykować stłuczonym ekranem?</p>
@@ -94,10 +96,10 @@
             <% } %>
             
             <label>
-                <input type="checkbox" name="ubezpieczenie" value="True">
+                <input type="checkbox" name="ubezpieczenie" value="True"> 
                 🧑‍⚕️ Ubezpieczenie (50 zł)
             </label>
-
+            <br>
             
 
             <button type="submit" id="submit-btn" class="submit-btn">Przejdź do zakupu</button>
