--- a/views/intro_task7.ejs
+++ b/views/intro_task7.ejs
@@ -67,7 +67,7 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>  
-        <p>Jesteś w trakcie zakupów smartfona. Przejdź do płatności.</p>
+        <p>Jesteś w trakcie zakupów smartfona. Przejdź do płatności bez ponoszenia dodatkowych kosztów.</p>
         <form action="/intro_task7" method="POST" id="intro_task7-form">
             <button type="submit" id="submit-button" class="submit-btn">Przejdź do zadania</button>
         </form>
