zad1 + gdms obligo
zad1 + gdms obligo

--- a/views/gdms.ejs
+++ b/views/gdms.ejs
@@ -39,7 +39,7 @@
         </p>
     </header>
 
-    <form action="/gdms" method="POST" novalidate>
+    <form action="/gdms" method="POST" >
         <!-- Wstaw CSRF‑token, jeśli Twój framework go wymaga -->
         <!-- {{ csrf_token() }} -->
 
